--- a/variety_store/templates/edit1.html
+++ b/variety_store/templates/edit1.html
@@ -14,7 +14,7 @@
 			    <div class="col-2"><button type="text" class="btn btn-dark">খরিদ্দারের তথ্য</button></div>
 			    <div class="col-3"><input type="text" class="form-control" name="name" value="{{ edit_obj.name }}"></div>
 			    <div class="col-3"><input type="text" class="form-control" name="mobile" value="{{ edit_obj.mobile }}"></div>
-			    <div class="col-2"><input type="text" class="form-control" name="jer" value="{{ edit_obj.jer }}"></div>
+			    <div class="col-2"><input type="text" class="form-control" name="jer" value="{{ baki }}"></div>
 			    <div class="col-2"><button type="submit" class="btn btn-primary">পরিবর্তন</button></div>
 			  </div>
 		</form>
